added debounce function

--- a/source/style/pop-up-window.css
+++ b/source/style/pop-up-window.css
@@ -1,4 +1,4 @@
-#pop-up-window {
+/*#pop-up-window {
   position: absolute;
   border-radius: 8px;
   box-shadow: 0px 8px 16px rgb(0 0 0 / 40%);
@@ -84,3 +84,4 @@
     visibility: visible;
   }
 }
+*/
